<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:background="@color/c_939393">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/a_battle_status_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
    >

        <TextView
                android:id="@+id/a_battle_status_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:text="나"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
                android:id="@+id/a_battle_status_player_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/a_battle_status_player_name"
        />

        <TextView
                android:id="@+id/a_battle_status_player_mp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/a_battle_status_player_hp"
        />

        <TextView
                android:id="@+id/a_battle_status_monster_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:text="적"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:id="@+id/a_battle_status_monster_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/a_battle_status_monster_name"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:id="@+id/a_battle_status_monster_mp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/a_battle_status_monster_hp"
                app:layout_constraintEnd_toEndOf="parent"
        />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/a_battle_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/a_battle_status_root"
            app:layout_constraintBottom_toTopOf="@id/a_battle_input"
            />

    <EditText
            android:id="@+id/a_battle_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/a_battle_input_button_vs"
    />

    <LinearLayout
            android:id="@+id/a_battle_input_button_vs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
    >
        <TextView
                android:id="@+id/a_battle_atk"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/battle_atk"
        />

        <TextView
                android:id="@+id/a_battle_def"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/battle_def"
        />

        <TextView
                android:id="@+id/a_battle_skill"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/battle_skill"
        />

        <TextView
                android:id="@+id/a_battle_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/battle_item"
        />

        <TextView
                android:id="@+id/a_battle_run"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/battle_run"
        />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/a_battle_input_button_move"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
    >
        <TextView
                android:id="@+id/a_battle_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/battle_left"
        />

        <TextView
                android:id="@+id/a_battle_up"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/battle_up"
        />

        <TextView
                android:id="@+id/a_battle_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/battle_right"
        />

        <TextView
                android:id="@+id/a_battle_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/battle_back"
        />

        <TextView
                android:id="@+id/a_battle_return"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/battle_return"
        />

        <TextView
                android:id="@+id/a_battle_next"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/battle_next"
                android:visibility="gone"
        />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>